<resources>
    <string name="app_name">NavTag</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Demo User</string>
    <string name="nav_header_subtitle">demo@navtag.app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_navtag">NavTag</string>
    <string name="menu_section">Widgets</string>
    <string name="menu_safety_light">Safety Light</string>
    <string name="menu_running">Running</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_commute">Commute</string>
    <string name="menu_destination">Destination</string>
    <string-array name="spinnerstuff">
        <item>Still</item>
        <item>Slow</item>
        <item>Fast</item>
        <item>SOS</item>
        <item>Freedom</item>
        <item>Rainbow</item>
    </string-array>
    <string-array name="speed_choice">
        <item>km</item>
        <item>min</item>
    </string-array>
    <string name="title_activity_destination">Map</string>
</resources>
