<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.glados.navtag.ui.navtag.NavTagFragment"
        android:label="@string/menu_navtag"
        tools:layout="@layout/fragment_navtag" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.glados.navtag.ui.safetylight.SafetyLightFragment"
        android:label="@string/menu_safety_light"
        tools:layout="@layout/fragment_widget" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.glados.navtag.ui.running.RunningFragment"
        android:label="@string/menu_running"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.glados.navtag.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.glados.navtag.ui.commute.CommuteFragment"
        android:label="@string/menu_commute"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.glados.navtag.ui.destination.DestinationFragment"
        android:label="@string/menu_destination"
        tools:layout="@layout/fragment_widget" />
</navigation>